tests/src/frontend/typechecking/invalid/memo_mut_5.sk
memoized fun foo(): mutable Ref<Int> {
  mutable Ref(0)
}
